[tool.poetry]
name = "sandbox-rag-app"
version = "0.1.0"
description = ""
authors = ["mori-dev <mori.dev.asdf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
python-dotenv = "^1.0.1"
fastapi = "^0.110.0"
openai = "^1.14.3"
pandas = "^2.2.1"
langchain = "^0.1.14"
chromadb = "^0.4.24"
unstructured = "^0.12.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
